--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 pulldown-cmark = "0.13.0"
 notify = "8.2.0"
+fuzzy-matcher = "0.3.7"
+dirs = "6.0.0"
+walkdir = "2.5.0"
+once_cell = "1.21.3"
